--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: coachingseafarers@gmail.com</p>
+        <p>Email: dimanisk@hotmail.com</p>
     </section>
 
     <footer>
