--- a/index.html
+++ b/index.html
@@ -1,125 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coaching Seafarers</title>
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f7f9fc;
-            color: #222;
-        }
-
-        header {
-            background: #003f7f;
-            color: white;
-            padding: 20px 40px;
-            text-align: center;
-        }
-
-        nav {
-            background: #002f5a;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .hero {
-            padding: 80px 20px;
-            text-align: center;
-            background: #e9f2ff;
-        }
-
-        .hero h1 {
-            font-size: 42px;
-            margin-bottom: 10px;
-        }
-
-        .hero p {
-            font-size: 20px;
-            max-width: 700px;
-            margin: 0 auto;
-        }
-
-        .section {
-            padding: 50px 20px;
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        .section h2 {
-            color: #003f7f;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background: #003f7f;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Konstantinos Dimanis | Seafarer Coaching & DP Training</title>
+  <meta name="description" content="Master Mariner & DP Instructor helping seafarers grow technically and personally through mentoring, DP training, and leadership coaching." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-    <header>
-        <h1>Coaching Seafarers</h1>
-        <p>Growth – Mentoring – Dynamic Performance</p>
-    </header>
-
-    <nav>
-        <a href="#">Home</a>
-        <a href="#services">Services</a>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="logo">
+        <span class="logo-mark">KD</span>
+        <span class="logo-text">Konstantinos Dimanis</span>
+      </div>
+      <nav class="nav">
         <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
+        <a href="#services">Services</a>
+        <a href="#for-seafarers">For Seafarers</a>
+        <a href="#resources">Resources</a>
+        <a href="#contact" class="btn btn-small">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <section class="hero">
-        <h1>Helping Seafarers Grow Professionally and Personally</h1>
-        <p>
-            Practical coaching for officers and crew, focused on leadership,
-            human factors, DP operations, and performance improvement onboard.
-        </p>
-    </section>
-
-    <section id="services" class="section">
-        <h2>Services</h2>
-        <p>• Mentoring for officers and crew</p>
-        <p>• Dynamic Positioning coaching</p>
-        <p>• Leadership & human factors training</p>
-        <p>• Career growth guidance</p>
-    </section>
-
-    <section id="about" class="section">
-        <h2>About the Project</h2>
-        <p>
-            Coaching Seafarers is a project dedicated to supporting maritime 
-            professionals with practical coaching, clear guidance, and proven 
-            development frameworks used onboard modern vessels.
-        </p>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Email: dimanisk@hotmail.com</p>
-    </section>
-
-    <footer>
-        <p>© 2025 Coaching Seafarers. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+  <main>
